[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/game_stats.gd" id="1_script"]

[node name="GameStats" type="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_right = -20.0
offset_top = 20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RoundLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Round: 1"
horizontal_alignment = 1

[node name="StageContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StageLabel" type="Label" parent="MarginContainer/VBoxContainer/StageContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Stage: 1 / 4"
horizontal_alignment = 1

[node name="StageIndicators" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StageContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PointsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PointsLabel" type="Label" parent="MarginContainer/VBoxContainer/PointsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Points: 0"
horizontal_alignment = 1

[node name="GemsLabel" type="Label" parent="MarginContainer/VBoxContainer/PointsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Gems: 0"
horizontal_alignment = 1

[node name="TargetLabel" type="Label" parent="MarginContainer/VBoxContainer/PointsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Target: 100"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/PointsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
value = 50.0
show_percentage = false
